# micro-yuminst

./: .gitmodules  Makefile-hif.am  Makefile-microyuminst.am  Makefile.am  README.md  autogen.sh  configure.ac  micro-yuminst.spec
packaging/: Makefile.dist-packaging  micro-yuminst.spec.in
src/: main.c
